# KanalservisTestProject

./: .dockerignore  .gitignore  README.md  docker-compose.yml
client/: Dockerfile  angular.json  package-lock.json  package.json
client/src/: index.html
client/src/app/: api.service.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  order.ts
client/src/app/websocket/: index.ts  websocket.config.ts  websocket.interfaces.ts  websocket.module.spec.ts  websocket.module.ts  websocket.service.spec.ts  websocket.service.ts
client/src/environments/: environment.prod.ts  environment.ts
server/: Dockerfile  create_scheduler.py  entrypoint.sh  manage.py  pyproject.toml
server/backend/: admin.py  apps.py  models.py  service_file.json  signals.py  tasks.py  utils.py
server/backend/api/: paginations.py  serializers.py  urls.py  views.py
server/backend/migrations/: 0001_initial.py
server/core/: asgi.py  urls.py  wsgi.py
server/core/settings/: __init__.py  caches.py  cors.py  databases.py  installed_apps.py  logging.py  middleware.py  q_cluster.py  rest_framework.py
server/jet/templates/admin/: base.html
server/static/: staticfiles.json
server/static/jet/css/icons/: style.8a6136654023.css
server/ws/: constants.py  consumers.py  routing.py
